# reboot

./: .bazelignore  .bazeliskrc  .bazelrc  .clang-format  .gitignore  .gitmodules  .isort.cfg  .prettierignore  .prettierrc.json  .style.yapf  BUILD.bazel  Dockerfile  LICENSE  Makefile  README.md  WORKSPACE.bazel  mypy-requirements.in  mypy-requirements_lock.txt  mypy.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rbt.sh  ruff.toml
bazel/pip_package_rule/: BUILD.bazel  auditwheel_trampoline.py  build_trampoline.py  pip_package.bzl  pyproject.toml.template  requirements.in  requirements_lock.txt  setup.py.template  twine_trampoline.py
ci/templates/: BUILD.bazel  build_and_test.yml.j2  devcontainer.yml.j2  development_containers_build_test.yml  development_containers_build_test_push.yml.j2  manylinux.yml.j2  mono_ci.yaml  public_ci.yaml  reboot_macos_environment.yml.j2  setup-bazel-remote-cache.action.yml
log/: BUILD.bazel  log.py
protoc_gen_mypy_plugin/: BUILD.bazel
rbt/v1alpha1/: BUILD.bazel  application_config.proto  application_metadata.proto  auth.proto  config_mode.proto  consensus_manager.proto  database.proto  errors.proto  index.ts  kubernetes_helpers.proto  nodejs.proto  options.proto  package.json  placement_planner.proto  react.proto  sidecar.proto  tasks.proto  transactions.proto  tsconfig.json
reboot/: BUILD.bazel  README.md  README.public.md  api.py  api_keys.py  force_reinstall.sh  helpers.py  naming.py  npm_install_local_reboot.sh  npm_install_local_reboot_react.sh  options.py  protobuf.py  protoc_gen_reboot_generic.py  protoc_gen_reboot_nodejs.py  protoc_gen_reboot_nodejs_boilerplate.py  protoc_gen_reboot_python.py  protoc_gen_reboot_python_boilerplate.py  protoc_gen_reboot_react.py  protoc_gen_reboot_typescript.py  protoc_gen_reboot_web.py  pydantic_schema_to_proto.py  pydantic_schema_to_zod.py  pydantic_to_proto.bzl  pydantic_to_proto.py  pydantic_to_zod.py  requirements.in  requirements_lock.txt  retag_wheel.py  rules.bzl  run_environments.py  settings.h  settings.py  stage_and_publish_local.sh  update_lockfiles.sh  uuidv7.py  versioning.py  versions.bzl  wait_for_tasks.py  yarn_install_local_reboot.sh
reboot/admin/: BUILD.bazel  export_import_client.py  export_import_converters.py  export_import_servicer.py
reboot/aio/: BUILD.bazel  aborted.py  applications.py  call.py  caller_id.py  caller_id_auth.py  concurrently.py  contexts.py  external.py  headers.py  health_check.py  http.py  idempotency.py  interceptors.py  libraries.py  memoize.py  monitoring.py  placement.py  react.py  reboot.py  resolvers.py  secrets.py  servers.py  servicers.py  signals.py  state_managers.py  stubs.py  tasks.py  tests.py  tracing.py  types.py  workflows.py
reboot/application/: BUILD.bazel  __init__.py  servicer.py
reboot/benchmarks/: README.md
reboot/ci/: rules.bzl
reboot/cli/: BUILD.bazel  README.md  cli.py  cloud.py  commands.py  detect_cores.py  dev.py  directories.py  export_import.py  generate.py  main.py  rbt_main.py  rc.py  secret.py  serve.py  subprocesses.py  task.py  terminal.py  transpile.py  update_check.py
reboot/controller/: BUILD.bazel  application_config.py  application_config_trackers.py  config_extractor.py  placement_planner.py  plan_makers.py  server_managers.py  servers.py  settings.py  shards.py
reboot/create-ui/: BUILD.bazel  package.json  tsconfig.json
reboot/crypto/: BUILD.bazel  root_keys.py
reboot/examples/: BUILD.bazel  README.j2.md  all_tests.sh  bank_README.md.yaml  bank_pydantic_README.md.yaml  boutique_README.md.yaml  chat_room_README.md.yaml  counter_README.md.yaml  docubot_README.md.yaml  monorepo_README.md.yaml  requirements_lock.txt  rules.bzl  templater.py
reboot/experimental/: BUILD.bazel  mcp.py
reboot/inspect/: BUILD.bazel  admin_auth.tsx  icons.tsx  index.css  index.html  index.tsx  package.json  servicer.py  states.css  states.tsx  tasks.css  tasks.tsx
reboot/mcp/: BUILD.bazel  claude_ngrok_error.html  context.py  factories.py  helpers.py  iframe.py  proxy.py  request_state.py  ui.py
reboot/nodejs/: BUILD.bazel  binding.gyp  dummy.cc  index.ts  install.cjs  package.json  preinstall.cjs  prepare_environment.sh  protoc-gen-es.ts  python.py  rbt-esbuild.ts  rbt.ts  reboot_native.cc  reboot_native.cjs  reboot_native.d.ts  rules.bzl  tsconfig.json  venv.ts  workspaces.ts  zod-to-proto.ts
reboot/ping/: .rbtrc  BUILD.bazel  README.md  mcp_servers.json  ping.py  ping_api.py
reboot/plugin/: BUILD.bazel  README.md  install.sh
reboot/react/: BUILD.bazel  index.tsx  package.json  tsconfig.json
reboot/rootpage/: BUILD.bazel  client_picker.tsx  code_block.tsx  decorations.tsx  hero.tsx  icons.tsx  index.css  index.html  index.html.j2  index.tsx  install_step.tsx  loading.tsx  package-lock.json  package.json  prompts_step.tsx  radio_group.tsx  ready_step.tsx  servicer.py  step_card.tsx  top_nav.tsx  tunnel_provider_picker.tsx  tunnel_status.tsx  tunnel_step.tsx  use_stored_state.ts  use_tunnel.ts  wizard.tsx
reboot/routing/: BUILD.bazel  cors_settings.py  envoy_config.py  xds_server.py
reboot/server/: BUILD.bazel  database.cc  database.h  database.py  database_native.cc  docker_local_envoy.py  executable_local_envoy.py  local_envoy.py  local_envoy_factory.py  local_envoy_nanny.cc  monotonic_clock.cc  monotonic_clock.h  service_descriptor_validator.py
reboot/ssl/: BUILD.bazel  localhost.key  (+1 more)
rebootdev/: BUILD.bazel  api.py  fail.py  helpers.py  naming.py  options.py  protobuf.py  protoc_gen_es_with_deps.cjs  protoc_gen_es_with_deps.py  protoc_gen_mypy_wrapper.py  protoc_gen_reboot_generic.py  protoc_gen_reboot_python.py  protoc_gen_reboot_python_boilerplate.py  pydantic_schema_to_proto.py  pydantic_schema_to_zod.py  pydantic_to_proto.bzl  pydantic_to_proto.py  pydantic_to_zod.py  requirements.in  requirements_lock.txt  rules.bzl  run_environments.py  settings.h  settings.py  time.py  versioning.py  versions.bzl
tests/: BUILD.bazel  grpc_testing.py  requirements.in  requirements_lock.txt  settings.py  sh_test_in_working_directory.bzl  sh_test_in_working_directory_launcher.sh  zod_to_proto.bzl
(+1976 files in other folders)
