workspace(name = "com_github_reboot_dev_reboot")

########################################################################

# We pull in the following repositories as local repositories pointing to their
# git submodules that we have so that we can do do more efficient development
# between the two repositories.

local_repository(
    name = "com_github_3rdparty_stout",
    path = "submodules/stout",
)

local_repository(
    name = "com_github_reboot_dev_pyprotoc_plugin",
    path = "submodules/pyprotoc-plugin",
)

########################################################################

load("//bazel:repos.bzl", "repos")

repos()

load("//bazel:py_toolchains.bzl", reboot_py_toolchains = "py_toolchains")

reboot_py_toolchains()

load("//bazel:pypi_repos.bzl", reboot_pypi_repos = "pypi_repos")

reboot_pypi_repos()

########################################################################

load("//bazel:deps.bzl", "deps")

deps()

########################################################################
# Create the host platform repository required by aspect_bazel_lib 2.x.

load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")
load("@platforms//host:extension.bzl", "host_platform_repo")

maybe(
    host_platform_repo,
    name = "host_platform",
)

########################################################################

load("//bazel:extra_deps.bzl", "extra_deps")

extra_deps()

########################################################################

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

########################################################################
# aspect_rules_ts setup, done here instead of splitting between
# 'bazel/repos.bzl' and 'bazel/deps.bzl' as this requires multiple
# "depths" of 'load(...)' calls. Ultimately it's time to move to Bazel
# modules as well.

http_archive(
    name = "aspect_rules_ts",
    sha256 = "b11f5bd59983a58826842029b99240fd0eeb6f1291d710db10f744b327701646",
    strip_prefix = "rules_ts-2.3.0",
    url = "https://github.com/aspect-build/rules_ts/releases/download/v2.3.0/rules_ts-v2.3.0.tar.gz",
)

load("@aspect_rules_ts//ts:repositories.bzl", "rules_ts_dependencies")

rules_ts_dependencies(
    ts_version_from = "//:package.json",
)

load("@aspect_rules_js//js:repositories.bzl", "rules_js_dependencies")

rules_js_dependencies()

load("@bazel_features//:deps.bzl", "bazel_features_deps")

bazel_features_deps()

########################################################################

load("@rules_nodejs//nodejs:repositories.bzl", "nodejs_register_toolchains")

# The 'node_repositories' dict specifiying Nodejs v20.19.0 information comes
# https://github.com/bazelbuild/rules_nodejs/blob/main/nodejs/private/node_versions.bzl
# We have to do this explicitly because the default Nodejs version is 16. We
# need a Nodejs version >=20.10.
# The name 'node' for this toolchain is important, since it's how we refer
# to it in several other Bazel files.
nodejs_register_toolchains(
    name = "node",
    node_repositories = {
        "20.19.0-darwin_amd64": ("node-v20.19.0-darwin-x64.tar.gz", "node-v20.19.0-darwin-x64", "a8554af97d6491fdbdabe63d3a1cfb9571228d25a3ad9aed2df856facb131b20"),
        "20.19.0-darwin_arm64": ("node-v20.19.0-darwin-arm64.tar.gz", "node-v20.19.0-darwin-arm64", "c016cd1975a264a29dc1b07c6fbe60d5df0a0c2beb4113c0450e3d998d1a0d9c"),
        "20.19.0-linux_amd64": ("node-v20.19.0-linux-x64.tar.xz", "node-v20.19.0-linux-x64", "b4e336584d62abefad31baecff7af167268be9bb7dd11f1297112e6eed3ca0d5"),
        "20.19.0-linux_arm64": ("node-v20.19.0-linux-arm64.tar.xz", "node-v20.19.0-linux-arm64", "dbe339e55eb393955a213e6b872066880bb9feceaa494f4d44c7aac205ec2ab9"),
        "20.19.0-linux_ppc64le": ("node-v20.19.0-linux-ppc64le.tar.xz", "node-v20.19.0-linux-ppc64le", "84937108f005679e60b486ed8e801cebfe923f02b76d8e710463d32f82181f65"),
        "20.19.0-linux_s390x": ("node-v20.19.0-linux-s390x.tar.xz", "node-v20.19.0-linux-s390x", "11f8ee99d792a83bba7b29911e0229dd6cd5e88987d7416346067db1cc76d89a"),
        "20.19.0-windows_amd64": ("node-v20.19.0-win-x64.zip", "node-v20.19.0-win-x64", "be72284c7bc62de07d5a9fd0ae196879842c085f11f7f2b60bf8864c0c9d6a4f"),
    },
    node_version = "20.19.0",
)

load("@aspect_rules_js//npm:repositories.bzl", "npm_translate_lock")

npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

load("@npm//:repositories.bzl", "npm_repositories")

npm_repositories()

########################################################################

http_archive(
    name = "aspect_rules_esbuild",
    sha256 = "ce206c03e27a702ba2a480ee0a1e4f8db124f3595460a77a3ae1e465243c7a73",
    strip_prefix = "rules_esbuild-0.19.0",
    url = "https://github.com/aspect-build/rules_esbuild/releases/download/v0.19.0/rules_esbuild-v0.19.0.tar.gz",
)

load("@aspect_rules_esbuild//esbuild:dependencies.bzl", "rules_esbuild_dependencies")

rules_esbuild_dependencies()

# Register a toolchain containing esbuild npm package and native bindings
load("@aspect_rules_esbuild//esbuild:repositories.bzl", "LATEST_ESBUILD_VERSION", "esbuild_register_toolchains")

esbuild_register_toolchains(
    name = "esbuild",
    esbuild_version = LATEST_ESBUILD_VERSION,
)

#### vitest rules - START

http_archive(
    name = "fremtind_rules_vitest",
    sha256 = "b4cf44ec735b3dc1476a83c7bfeec8410e0f2e1346f0143cc88f8b3f9e3ebff8",
    strip_prefix = "rules_vitest-0.1.0",
    url = "https://github.com/fremtind/rules_vitest/releases/download/v0.1.0/rules_vitest-v0.1.0.tar.gz",
)

load("@fremtind_rules_vitest//vitest:dependencies.bzl", "rules_vitest_dependencies")

rules_vitest_dependencies()

#### vitest rules - END
