load("@rules_python//python:defs.bzl", "py_library")

# PEP 561 marker file; tells tools that type information is available.
genrule(
    name = "py_typed",
    srcs = [],
    outs = ["py.typed"],
    cmd = "echo '# Marker file for PEP 561.' > $@",
    visibility = ["//visibility:public"],
)

py_library(
    name = "log_py",
    srcs = ["log.py"],
    data = [":py_typed"],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
)
